--- a/02 DOM Манипуляция элементами и события/lesson-03/задачи 01/index.html
+++ b/02 DOM Манипуляция элементами и события/lesson-03/задачи 01/index.html
@@ -21,10 +21,10 @@
     </article>
   </div>
   <ul>
-    <li><a href="#">Link1</a></li>
-    <li><a href="#">Link2</a></li>
-    <li><a href="#">Link3</a></li>
-    <li><a href="#">Link4</a></li>
+    <li><a href="#">index 1</a></li>
+    <li><a href="#">index 2</a></li>
+    <li><a href="#">index 3</a></li>
+    <li><a href="#">index 4</a></li>
   </ul>
   <span></span>
   <a href="#">Some link</a>
