--- a/02 DOM Манипуляция элементами и события/first-project-START/index.html
+++ b/02 DOM Манипуляция элементами и события/first-project-START/index.html
@@ -16,7 +16,7 @@
 
 <body class="page__body">
 
-  <form class="form">
+  <form class="form" name="addTask">
     <h3 class="form__title">Add new task</h3>
 
     <input type="text" name="title" id="title" class="form__input" placeholder="Task title">
@@ -25,14 +25,6 @@
   </form>
 
   <ul class="tasks">
-    <li class="tasks__task task">
-      <h3 class="task__title">My title</h3>
-      <p class="task__body">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi soluta vitae sint tenetur quam quisquam explicabo quos? Aut iste ut laborum iure aspernatur, nam ea quibusdam rerum minus magnam dignissimos.
-      </p>
-      <button class="task__button">Delete</button>
-            
-    </li>
   </ul>
 
   <script src="index.js"></script>
