--- a/02 DOM Манипуляция элементами и события/09 first-project-themes/index.html
+++ b/02 DOM Манипуляция элементами и события/09 first-project-themes/index.html
@@ -16,16 +16,28 @@
 
 <body class="page__body">
 
-  <form class="form" name="addTask">
-    <h3 class="form__title">Add new task</h3>
+  <header class="header">
+    <h2 class="header__title">Navbar</h2>
 
-    <input type="text" name="title" id="title" class="form__input" placeholder="Task title">
-    <input type="text" name="body" id="body" class="form__input" placeholder="Task body">
-    <button class="form__button" type="submit">Add task</button>
-  </form>
+    <select class="header__theme-select">
+      <option value="default">Theme Default</option>
+      <option value="light">Theme Light</option>
+      <option value="dark">Theme Dark</option>
+    </select>
+  </header>
 
-  <ul class="tasks">
-  </ul>
+  <main class="main">
+    <form class="form" name="addTask">
+      <h3 class="form__title">Add new task</h3>
+
+      <input type="text" name="title" id="title" class="form__input" placeholder="Task title">
+      <input type="text" name="body" id="body" class="form__input" placeholder="Task body">
+      <button class="form__button" type="submit">Add task</button>
+    </form>
+
+    <ul class="tasks">
+    </ul>
+  </main>
 
   <script src="index.js"></script>
 </body>
